plugins {
    id 'java-library'
    id 'com.diffplug.spotless' version '8.2.1'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockito:mockito-core:5.14.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'

    implementation libs.gson
}

spotless {
    java {
        googleJavaFormat().aosp()
        importOrder('java', 'javax', 'jakarta', 'org', 'com')
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs.addAll(['--enable-preview'])
    dependsOn 'spotlessApply'
}
test {
    jvmArgs(['--enable-preview'])
    useJUnitPlatform()
    testLogging {
        showStandardStreams = true
        events "passed", "skipped", "failed", "standardOut", "standardError"
    }

    afterTest { desc, result ->
        if (result.resultType == TestResult.ResultType.FAILURE) {
            println "Failing test: ${desc.name}"
            println "Test result: ${result.resultType}"
            println "Test exception: ${result.exception}"
        }
    }
}
